# Devops-Agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  PROJECT_V2.md  README.md  pyproject.toml
.claude/agents/: devops-agent-auditor.md
api/: main.py
api/routes/: health.py  metrics.py
config/: deploy_config_schema.py  servers.example.yml  settings.py  token_limits.py  tool_tiers.yml
docs/: PROJECT_V2.md  PROJECT_V2_LOGS_MEMO.md  PROJECT_V2_TELEGRAM_MIGRATION.md  deploy.config.example.yml
docs/completed/: phase-0-environment-scaffolding.md  phase-1-config-logging-mongo.md  phase-2-github-layer.md  phase-3-telegram-bot-shell.md  phase-4-server-registry-docker-context.md
docs/deployment/: post-dev-deployment.md
docs/phases/: README.md  phase-1-config-logging-mongo.md  phase-10-ai-layer.md  phase-11-tests-ci-docker.md  phase-12-physical-server-deployment.md  phase-2-github-layer.md  phase-3-telegram-bot-shell.md  phase-4-server-registry-docker-context.md  phase-5-deploy-pipeline.md  phase-6-langgraph-agent.md  phase-7-rollback-destructive-ops.md  phase-8-layer-1-diagnostics.md  phase-9-log-scraper-history.md
scripts/: telegram_commands.txt
telegram_bot/: bot.py  colors.py  enrollment.py  formatters.py  handlers.py  keyboards.py  messages.py
tests/: conftest.py
tests/unit/: test_deploy_config_schema.py  test_docker_context.py  test_fuzzy_resolver.py  test_github_cache.py  test_github_tools.py  test_registry.py  test_secrets_check.py  test_server_registry.py  test_settings.py
tools/: github_tools.py  registry.py  server_tools.py
utils/: docker_context.py  fuzzy_resolver.py  github_cache.py  logger.py  mongo.py  secrets_check.py  server_registry.py  user_registry.py  user_reverifier.py
